kubernetes/ombi/ombi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: ombi
  name: ombi
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ombi
    spec:
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: VIRTUAL_HOST
          value: ombi.slips23.com
        - name: VIRTUAL_PORT
          value: "3579"
        image: linuxserver/ombi
        name: ombi
        ports:
        - containerPort: 3579
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: ombi-claim0
      restartPolicy: Always
      volumes:
      - name: ombi-claim0
        persistentVolumeClaim:
          claimName: ombi-claim0
status: {}
