kubernetes/ombi/ombi-publish.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
spec:
  selector:
    matchLabels:
      app: ombi
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      serviceAccountName: ombi
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: TZ
          value: "America/Detroit"
        image: linuxserver/ombi:latest
        name: ombi
        ports:
        - containerPort: 3579
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: ombi-volume
      restartPolicy: Always
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      volumes:
      - name: ombi-volume
        persistentVolumeClaim:
          claimName: ombi-volume-claim
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  type: NodePort
  ports:
  - port: 3579
    targetPort: 3579
  selector:
    app: ombi
